sdk/include/ml.h

/* ========================================================================== */
/*                              CORE TYPES & UTILITIES                         */
/* ========================================================================== */

/** Plugin Id string type - plain char* for plugin id
 * @ref ml_get_device_list device must in list of plugin ids
 */
typedef const char* ml_PluginId;
/** Path string type - plain char* for file paths */
typedef const char* ml_Path;
typedef enum {
    ML_LOG_LEVEL_TRACE, /* Trace messages */
    ML_LOG_LEVEL_DEBUG, /* Debug messages */
    ML_LOG_LEVEL_INFO,  /* Informational messages */
    ML_LOG_LEVEL_WARN,  /* Warning messages */
    ML_LOG_LEVEL_ERROR  /* Error messages */
} ml_LogLevel;
/** Logging callback function type */
typedef void (*ml_log_callback)(ml_LogLevel, const char*);
/* ====================  Data Structures  ==================================== */

/** Profile data structure for performance metrics */
typedef struct {
    int64_t ttft;        /* Time to first token (us) */
    int64_t prompt_time; /* Prompt processing time (us) */
    int64_t decode_time; /* Token generation time (us) */

    int64_t prompt_tokens;    /* Number of prompt tokens */
    int64_t generated_tokens; /* Number of generated tokens */
    int64_t audio_duration;   /* Audio duration (us) */

    double prefill_speed;    /* Prefill speed (tokens/sec) */
    double decoding_speed;   /* Decoding speed (tokens/sec) */
    double real_time_factor; /* Real-Time Factor(RTF) (1.0 = real-time, >1.0 = faster, <1.0 = slower) */

    const char* stop_reason; /* Stop reason: "eos", "length", "user", "stop_sequence" */
} ml_ProfileData;
/** LLM / VLM model configuration */
typedef struct {
    int32_t n_ctx;            // text context, 0 = from model
    int32_t n_threads;        // number of threads to use for generation
    int32_t n_threads_batch;  // number of threads to use for batch processing
    int32_t n_batch;          // logical maximum batch size that can be submitted to llama_decode
    int32_t n_ubatch;         // physical maximum batch size
    int32_t n_seq_max;        // max number of sequences (i.e. distinct states for recurrent models)
    int32_t n_gpu_layers;     // number of layers to offload to GPU, 0 = all layers on CPU

    // TODO: consider removing the following fields from ModelConfig, or move to another struct
    ml_Path     chat_template_path;     // path to chat template file, optional
    const char* chat_template_content;  // content of chat template file, optional
    const char* system_prompt;          // system prompt for chat template, optional
    bool        enable_sampling;        // DEPRECATED, use enable_json in ml_SamplerConfig
    const char* grammar_str;            // grammar string
    int32_t     max_tokens;             // max tokens to generate
    bool        enable_thinking;        // enable thinking mode for Qwen models
    bool        verbose;                // verbose logging
    // For QNN
    ml_Path qnn_model_folder_path;  // path to QNN model folder, default same as model_path
    ml_Path qnn_lib_folder_path;    // path to QNN library folder, default same as model_path
} ml_ModelConfig;
/* ========================================================================== */
/*                              TEXT-TO-SPEECH (TTS)                         */
/* ========================================================================== */

/* ====================  Configuration Structures  =========================== */

/** TTS synthesis configuration */
typedef struct {
    const char* voice;       /* Voice identifier */
    float       speed;       /* Speech speed (1.0 = normal) */
    int32_t     seed;        /* Random seed (-1 for random) */
    int32_t     sample_rate; /* Output sample rate in Hz */
} ml_TTSConfig;
/** TTS sampling parameters */
typedef struct {
    float temperature;  /* Sampling temperature */
    float noise_scale;  /* Noise scale for voice variation */
    float length_scale; /* Length scale for speech duration */
} ml_TTSSamplerConfig;
/** TTS synthesis result */
typedef struct {
    ml_Path audio_path;       /* Path where the synthesized audio is saved (caller must free with ml_free) */
    float   duration_seconds; /* Audio duration in seconds */
    int32_t sample_rate;      /* Audio sample rate in Hz */
    int32_t channels;         /* Number of audio channels (default: 1) */
    int32_t num_samples;      /* Number of audio samples */
} ml_TTSResult;
typedef struct ml_TTS ml_TTS; /* Opaque TTS handle */
/* ====================  Lifecycle Management  ============================== */

/** Input structure for creating a TTS instance */
typedef struct {
    const char*    model_name;   /** Name of the model */
    ml_Path        model_path;   /** Path to the TTS model file */
    ml_ModelConfig config;       /** Model configuration */
    ml_Path        vocoder_path; /** Path to the vocoder file */
    ml_PluginId    plugin_id;    /** Plugin to use for the model */
    const char*    device_id;    /** Device to use for the model, NULL for default device */
} ml_TtsCreateInput;
/**
 * @brief Create and initialize a TTS instance with model and vocoder
 *
 * @param input[in]: Input parameters for the TTS creation
 * @param out_handle[out]: Pointer to the TTS handle. Must be freed with ml_tts_destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_tts_create(const ml_TtsCreateInput* input, ml_TTS** out_handle);
/**
 * @brief Destroy TTS instance and free associated resources
 *
 * @param handle[in]: The TTS handle to destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_tts_destroy(ml_TTS* handle);
/* ====================  Speech Synthesis  ================================== */

/** Input structure for TTS synthesis */
typedef struct {
    const char*         text_utf8;   /** Text to synthesize in UTF-8 encoding */
    const ml_TTSConfig* config;      /** TTS configuration (optional, can be nullptr) */
    ml_Path             output_path; /** Optional output file path (NULL for auto-generated) */
} ml_TtsSynthesizeInput;
/** Output structure for TTS synthesis */
typedef struct {
    ml_TTSResult   result;       /** Synthesis result with audio saved to filesystem */
    ml_ProfileData profile_data; /** Profiling data for the synthesis operation */
} ml_TtsSynthesizeOutput;
/**
 * @brief Synthesize speech from text and save to filesystem
 *
 * @param handle[in]: TTS handle
 * @param input[in]: Input parameters for speech synthesis
 * @param output[out]: Output data containing the path where synthesized audio is saved
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_tts_synthesize(ml_TTS* handle, const ml_TtsSynthesizeInput* input, ml_TtsSynthesizeOutput* output);
/* ====================  Voice Management  ================================== */

/** Input structure for getting available voices */
typedef struct {
    void* reserved; /** Reserved for future use, safe to set as NULL */
} ml_TtsListAvailableVoicesInput;
/** Output structure for getting available voices */
typedef struct {
    const char** voice_ids;   /** Array of available voice identifiers (caller must free with ml_free) */
    int32_t      voice_count; /** Number of available voices */
} ml_TtsListAvailableVoicesOutput;
/**
 * @brief Get list of available voice identifiers
 *
 * @param handle[in]: TTS handle
 * @param input[in]: Input parameters for voice list query
 * @param output[out]: Output data containing the available voices array and count
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Thread-safe
 */
ML_API int32_t ml_tts_list_available_voices(
    const ml_TTS* handle, const ml_TtsListAvailableVoicesInput* input, ml_TtsListAvailableVoicesOutput* output);